--- a/composer.json
+++ b/composer.json
@@ -69,9 +69,9 @@
             "@php artisan package:discover"
         ],
         "post-update-cmd": [
-            "php artisan clear-compiled",
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan ide-helper:generate",
-            "php artisan optimize"
+            "php artisan ide-helper:meta"
         ]
     },
     "config": {
