--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+DB_PREFIX=cms
+DB_ENGINE=InnoDB
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
