--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+CACHE_ENABLE=false
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
