--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "mcamara/laravel-localization": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
@@ -44,14 +45,16 @@
             "App\\": "app/",
             "Inspire\\Base\\": "modules/base/src",
             "Inspire\\Acl\\": "modules/acl/src",
-            "Inspire\\Posts\\": "modules/posts/src"
+            "Inspire\\Post\\": "modules/post/src",
+            "Inspire\\Page\\": "modules/page/src",
+            "Inspire\\Dashboard\\": "modules/dashboard/src"
         }
     },
     "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
+    "psr-4": {
+        "Tests\\": "tests/"
+    }
+},
     "extra": {
         "laravel": {
             "dont-discover": []
