--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "hassankhan/config": "^1.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "mcamara/laravel-localization": "^1.3"
@@ -47,7 +48,9 @@
             "Inspire\\Acl\\": "modules/acl/src",
             "Inspire\\Post\\": "modules/post/src",
             "Inspire\\Page\\": "modules/page/src",
-            "Inspire\\Dashboard\\": "modules/dashboard/src"
+            "Inspire\\Dashboard\\": "modules/dashboard/src",
+            "Inspire\\User\\":"modules/user/src",
+            "Inspire\\Theme\\":"modules/theme/src"
         }
     },
     "autoload-dev": {
