--- a/composer.json
+++ b/composer.json
@@ -76,8 +76,10 @@
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan clear-compiled",
             "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta"
+            "php artisan ide-helper:meta",
+            "php artisan optimize"
         ]
     },
     "config": {
