--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "hassankhan/config": "^1.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "mcamara/laravel-localization": "^1.3"
+        "mcamara/laravel-localization": "^1.3",
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
