--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
+        "php": "7.2",
         "fideloper/proxy": "^4.0",
         "hassankhan/config": "^1.0",
         "laravel/framework": "5.6.*",
