--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
-  "name": "adminlte",
-  "version": "1.0.0",
-  "description": "",
-  "main": "gulpfile.js",
   "private": true,
   "scripts": {
-    "postinstall": "bower-installer",
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
@@ -14,19 +9,5 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "author": "hoatq",
-  "license": "MIT",
-  "dependencies": {
-    "bower-installer": "^1.3.6"
-  },
-  "devDependencies": {
-    "axios": "^0.18",
-    "bootstrap": "^4.0.0",
-    "popper.js": "^1.12",
-    "cross-env": "^5.1",
-    "jquery": "^3.2",
-    "laravel-mix": "^2.0",
-    "lodash": "^4.17.5",
-    "vue": "^2.5.7"
-  }
+  "devDependencies": {}
 }
