--- a/.env.example
+++ b/.env.example
@@ -44,4 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+FRONTEND_DEFAULT=default
+BACKEND_DEFAULT=adminlte
+OFFLINE=true
+
 DEBUGBAR_ENABLED=false
