--- a/Themes/backend/adminlte/package.json
+++ b/Themes/backend/adminlte/package.json
@@ -3,30 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "private": true,
   "scripts": {
-    "postinstall": "bower-installer",
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-  },
-  "author": "hoatq",
-  "license": "MIT",
-  "dependencies": {
-    "bower-installer": "^1.3.6"
+    "prod": "gulp --production",
+    "dev": "gulp watch"
   },
   "devDependencies": {
-    "axios": "^0.18",
-    "bootstrap": "^4.0.0",
-    "popper.js": "^1.12",
-    "cross-env": "^5.1",
-    "jquery": "^3.2",
-    "laravel-mix": "^2.0",
-    "lodash": "^4.17.5",
-    "vue": "^2.5.7"
-  }
+    "bootstrap-sass": "^3.3.7",
+    "gulp": "^3.9.1",
+    "jquery": "^3.1.0",
+    "laravel-elixir": "^6.0.0-14",
+    "laravel-elixir-rollup-official": "^1.1.0",
+    "laravel-elixir-vue-2": "^0.2.0",
+    "lodash": "^4.16.2",
+    "vue": "^2.0.1",
+    "vue-resource": "^1.0.3"
+  },
+  "dependencies": {}
 }
