--- a/Themes/backend/adminlte/bower.json
+++ b/Themes/backend/adminlte/bower.json
@@ -17,15 +17,20 @@
   ],
   "dependencies": {
     "bootstrap": "3.3.7",
-    "font-awesome": "4.7.0"
+    "font-awesome": "4.7.0",
+    "select2": "^4.0.5"
   },
   "install": {
     "path": "./../../../public/themes/backend/adminlte/assets/vendor",
     "sources": {
       "bootstrap": {
         "mapping": [
-          {"assets/resources/vendor/bootstrap/dist/js/bootstrap.min.js": "js/bootstrap.min.js"},
-          {"assets/resources/vendor/bootstrap/dist/css/bootstrap.min.css":"css/bootstrap.min.css"}
+          {
+            "assets/resources/vendor/bootstrap/dist/js/bootstrap.min.js": "js/bootstrap.min.js"
+          },
+          {
+            "assets/resources/vendor/bootstrap/dist/css/bootstrap.min.css": "css/bootstrap.min.css"
+          }
         ]
       },
       "jquery": [
@@ -33,8 +38,22 @@
       ],
       "font-awesome": {
         "mapping": [
-          {"assets/resources/vendor/font-awesome/css/font-awesome.min.css": "css/font-awesome.min.css"},
-          {"assets/resources/vendor/font-awesome/fonts/**": "fonts"}
+          {
+            "assets/resources/vendor/font-awesome/css/font-awesome.min.css": "css/font-awesome.min.css"
+          },
+          {
+            "assets/resources/vendor/font-awesome/fonts/**": "fonts"
+          }
+        ]
+      },
+      "select2": {
+        "mapping":[
+          {
+            "assets/resources/vendor/select2/dist/js/select2.min.js": "js/select2.min.js"
+          },
+          {
+            "assets/resources/vendor/select2/dist/css/select2.min.css": "css/select2.min.css"
+          }
         ]
       }
     }
