--- a/Themes/backend/adminlte/bower.json
+++ b/Themes/backend/adminlte/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "",
   "authors": [
-    "tqhoa <webnambo@gmail.com>"
+    "tqhoa <tqhoa8th@gmail.com>"
   ],
   "license": "MIT",
   "homepage": "https://github.com/inspiredby/lucky",
