--- a/Themes/backend/themekit/package.json
+++ b/Themes/backend/themekit/package.json
@@ -2,7 +2,7 @@
   "name": "themekit",
   "version": "1.0.0",
   "description": "Theme Kit",
-  "main": "gulp.js",
+  "main": "gulpfile.js",
   "scripts": {
     "prod": "gulp --production",
     "dev": "gulp watch"
@@ -14,6 +14,8 @@
   "author": "hoatq",
   "license": "MIT",
   "devDependencies": {
+    "gulp": "^3.9.1",
     "laravel-elixir": "^6.0.0-18"
-  }
+  },
+  "dependencies": {}
 }
