--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "7.2",
+        "php": ">=7.2",
         "fideloper/proxy": "^4.0",
         "hassankhan/config": "^1.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.6.10",
         "mcamara/laravel-localization": "^1.3",
         "symfony/yaml": "^4.1"
     },
