Create Menus table

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://cms-lucky.local
-APP_ADMIN=admin
+APP_ADMIN_PREFIX=admin
 APP_LOCALE=en
 
 LOG_CHANNEL=stack
