--- a/Themes/backend/themekit/package.json
+++ b/Themes/backend/themekit/package.json
@@ -16,12 +16,16 @@
   },
   "devDependencies": {
     "axios": "^0.18",
-    "bootstrap": "^4.0.0",
-    "popper.js": "^1.12",
+    "bootstrap": "^4.3.1",
     "cross-env": "^5.1",
-    "jquery": "^3.2",
+    "jquery": "^3.3.1",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.5",
+    "popper.js": "^1.12",
     "vue": "^2.5.7"
+  },
+  "dependencies": {
+    "perfect-scrollbar": "^1.4.0",
+    "screenfull": "^3.3.3"
   }
 }
