--- a/Themes/backend/themekit/package.json
+++ b/Themes/backend/themekit/package.json
@@ -15,21 +15,20 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.18",
-    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
-    "jquery": "^3.3.1",
-    "laravel-mix": "^2.0",
-    "lodash": "^4.17.5",
-    "popper.js": "^1.12",
-    "vue": "^2.5.7"
+    "laravel-mix": "^2.0"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
+    "popper.js": "^1.12",
+    "vue": "^2.5.7",
+    "axios": "^0.18",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "icon-kit": "git+https://github.com/IconKit/IconKit.git",
-    "ionicons": "^4.5.5",
     "perfect-scrollbar": "^1.4.0",
     "screenfull": "^4.1.0"
   }
