--- a/Themes/backend/themekit/package.json
+++ b/Themes/backend/themekit/package.json
@@ -15,21 +15,33 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-vue": "^5.2.2",
     "laravel-mix": "^2.0"
   },
   "dependencies": {
-    "lodash": "^4.17.5",
-    "popper.js": "^1.12",
-    "vue": "^2.5.7",
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "axios": "^0.18",
     "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "@fortawesome/fontawesome-free": "^5.8.1",
+    "element-ui": "^2.7.0",
     "icon-kit": "git+https://github.com/IconKit/IconKit.git",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "perfect-scrollbar": "^1.4.0",
-    "screenfull": "^4.1.0"
+    "popper.js": "^1.12",
+    "screenfull": "^4.1.0",
+    "vue": "^2.5.7",
+    "vue-router": "^3.0.2"
   }
 }
