--- a/Themes/backend/themekit/package.json
+++ b/Themes/backend/themekit/package.json
@@ -32,6 +32,7 @@
     "popper.js": "^1.12",
     "screenfull": "^4.1.0",
     "vue": "^2.5.7",
+    "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.2"
   }
 }
