--- a/Themes/backend/themekit/package.json
+++ b/Themes/backend/themekit/package.json
@@ -31,6 +31,7 @@
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.12",
     "screenfull": "^4.1.0",
+    "selectize": "^0.12.6",
     "vue": "^2.5.7",
     "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.2"
