--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -14,17 +14,18 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "laravel-mix": "^4.0.15",
-    "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
-    "resolve-url-loader": "^3.0.1"
+    "laravel-mix": "^3.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "element-ui": "^2.7.2",
     "icon-kit": "^1.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
-    "popper": "^1.0.1",
-    "vue": "^2.6.10"
+    "popper.js": "^1.14.7",
+    "vue": "^2.6.10",
+    "vue-i18n": "^8.10.0",
+    "vue-router": "^3.0.2"
   }
 }
