--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -23,6 +23,7 @@
     "icon-kit": "^1.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
+    "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.7",
     "vue": "^2.6.10",
     "vue-i18n": "^8.10.0",
