--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.11",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.7",
+    "screenfull": "^4.2.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.2"
