--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -27,7 +27,9 @@
     "popper.js": "^1.14.7",
     "screenfull": "^4.2.0",
     "vue": "^2.6.10",
+    "vue-events": "^3.1.0",
     "vue-i18n": "^8.10.0",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vue-simplemde": "^0.5.1"
   }
 }
