load dymanic language

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://lavakit.local
 APP_ADMIN_PREFIX=admin
 APP_LOCALE=en
+APP_INSTALLED=false
 
 LOG_CHANNEL=daily
 APP_LOG_MAX_FILE=30
@@ -19,7 +20,7 @@ DB_PREFIX=lk_
 DB_ENGINE=InnoDB
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
