--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "element-ui": "^2.7.2",
+    "font-awesome": "^4.7.0",
     "icon-kit": "^1.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
