--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -40,6 +40,7 @@
     "vue-events": "^3.1.0",
     "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.2",
-    "vue-simplemde": "^0.5.1"
+    "vue-simplemde": "^0.5.1",
+    "vue-top-progress": "^0.7.0"
   }
 }
