--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -41,6 +41,8 @@
     "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.2",
     "vue-simplemde": "^0.5.1",
-    "vue-top-progress": "^0.7.0"
+    "vue-top-progress": "^0.7.0",
+    "vuex": "^3.1.0",
+    "vuex-easy-access": "^3.1.6"
   }
 }
