--- a/Themes/backend/lavatheme/package.json
+++ b/Themes/backend/lavatheme/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.3.1",
     "element-ui": "^2.7.2",
     "font-awesome": "^4.7.0",
+    "form-backend-validation": "^2.3.6",
     "icon-kit": "^1.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
