--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "fideloper/proxy": "^4.0",
         "hassankhan/config": "^1.0",
         "laravel/framework": "5.6.*",
+        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6.10",
         "mcamara/laravel-localization": "^1.3",
