--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "type": "project",
     "require": {
         "php": ">=7.2",
+        "darkaonline/l5-swagger": "^5.8",
         "dimsav/laravel-translatable": "^9.4",
         "fideloper/proxy": "^4.0",
         "hassankhan/config": "^1.0",
@@ -30,7 +31,8 @@
         "laravelcollective/html": "^5.6.10",
         "mcamara/laravel-localization": "^1.3",
         "symfony/yaml": "^4.1",
-        "tightenco/ziggy": "^0.6.9"
+        "tightenco/ziggy": "^0.6.9",
+        "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
