[created command installing]

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Lavakit
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://lavakit.local
 APP_ADMIN_PREFIX=admin
 APP_LOCALE=en
