--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "type": "project",
     "require": {
         "php": ">=7.2",
+        "astrotomic/laravel-translatable": "^11.5",
         "darkaonline/l5-swagger": "^5.8",
-        "dimsav/laravel-translatable": "^9.4",
         "fideloper/proxy": "^4.0",
         "hassankhan/config": "^1.0",
         "laravel/framework": "5.6.*",
@@ -34,12 +34,11 @@
         "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.1",
-        "barryvdh/laravel-ide-helper": "^2.4",
+        "barryvdh/laravel-debugbar": "^3.2",
+        "barryvdh/laravel-ide-helper": "^2.6",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "mrabbani/laravel-module-manager": "^1.5",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
     },
@@ -87,8 +86,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan clear-compiled",
             "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta",
-            "php artisan optimize"
+            "php artisan ide-helper:meta"
         ]
     },
     "config": {
