--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "modules/user/database/seeds"
         ],
         "psr-4": {
             "App\\": "app/",
